# voice-hermes

./: .gitignore  README.md  config.example.toml  pyproject.toml  requirements.txt  setup.ps1  setup.sh  voice-hermes.service
scripts/: setup_macos.sh  voice-hermes.plist
tests/: __init__.py  test_audio.py
voice_hermes/: __init__.py  __main__.py  agent_bridge.py  audio.py  cli.py  config.py  interrupt.py  orchestrator.py  stt.py  tts.py  wake_word.py
