[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "voice-hermes"
version = "0.1.0"
description = "Headless voice interface for Hermes Agent — wake word, STT, TTS, interruptible, fully local"
requires-python = ">=3.11"
dependencies = []
